manifests/dvwa-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: dvwa-db
spec:
  ports:
    - port: 3306
  selector:
    app: dvwa-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvwa-db
spec:
  selector:
    matchLabels:
      app: dvwa-db
  template:
    metadata:
      labels:
        app: dvwa-db
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
