manifests/waf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waf-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waf-proxy
  template:
    metadata:
      labels:
        app: waf-proxy
    spec:
      containers:
      - name: waf
        image: owasp/modsecurity-crs:nginx # Official OWASP image
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: config
        configMap:
          name: waf-config
---
apiVersion: v1
kind: Service
metadata:
  name: waf-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30005 # You will access the app here
  selector:
    app: waf-proxy
